Imagens com link e melhorias no css

--- a/index.html
+++ b/index.html
@@ -60,10 +60,24 @@
     <footer>
         <hr>
         <div class="footer">
+            <a href="https://facebook.com"  class="imagens">
+                <img src="img/facebook.svg">
+            </a>
+            <a href="https://instagram.com" class="imagens">
+                <img src="img/instagram.svg">
+            </a>
+            <a href="https://linkedin.com" class="imagens">
+                <img src="img/linkedin.svg">
+            </a>
+            <a href="https://youtube.com" class="imagens">
+                <img src="img/youtube.svg">
+            </a>
+            <!--
             <img src="img/facebook.svg" alt="Face">
             <img src="img/instagram.svg" alt="Insta">
             <img src="img/linkedin.svg" alt="Linkedin">
             <img src="img/youtube.svg" alt="Youtube">
+            -->
         </div>
     </footer>
 </body>
