melhoria de semântica com a tag article

--- a/index.html
+++ b/index.html
@@ -16,16 +16,18 @@
             <h5>Postado em 02/03/2021</h5>
         </div>
     </head>
-    <main>
-        <article>
-            <div>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium illo dolores cupiditate aut distinctio, aliquam minus omnis corrupti molestiae vel. Pariatur maiores vel enim voluptate, molestias nisi repellat ipsam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit quisquam ipsam pariatur laudantium nam provident aliquid, <mark>at impedit recusandae</mark> beatae reiciendis deleniti, quia non totam. Quam necessitatibus ipsum eligendi deserunt!</p>
-            </div>
-            <div>
-                <img src="img/destaque.webp" alt="Cantina DH" class="imgPrincipal">
-            </div>
-        </article>
-        <article>
+    <article>
+        <section>
+            <main>
+                <div>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium illo dolores cupiditate aut distinctio, aliquam minus omnis corrupti molestiae vel. Pariatur maiores vel enim voluptate, molestias nisi repellat ipsam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit quisquam ipsam pariatur laudantium nam provident aliquid, <mark>at impedit recusandae</mark> beatae reiciendis deleniti, quia non totam. Quam necessitatibus ipsum eligendi deserunt!</p>
+                </div>
+                <div>
+                    <img src="img/destaque.webp" alt="Cantina DH" class="imgPrincipal">
+                </div>
+            </main>
+        </section>
+        <section>
             <div class="subtitulo">
                 <h2>Lorem ipsum dolor sit.</h2>
             </div>
@@ -42,8 +44,8 @@
             <div>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium illo dolores cupiditate aut distinctio, aliquam minus omnis corrupti molestiae vel. Pariatur maiores vel enim voluptate, molestias nisi repellat ipsam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit quisquam ipsam pariatur laudantium nam provident aliquid,at impedit recusandae beatae reiciendis deleniti, quia non totam. Quam necessitatibus ipsum eligendi deserunt!</p>
             </div>
-        </article>
-        <article>
+        </section>
+        <section>
             <div class="subtitulo">
                 <h2>Lorem ipsum dolor sit.</h2>
             </div>
@@ -55,8 +57,8 @@
             </div>
             <div>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem doloremque similique quis sequi optio earum fugit laboriosam exercitationem ut nemo ratione, reprehenderit iure illo aperiam quo eum quia asperiores obcaecati? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae ratione laudantium, recusandae reiciendis non accusantium modi at ex! Iusto sapiente sunt, sint laudantium natus quasi architecto id? Odio, dolor quis.</p>
-        </article>
-    </main>
+        </section>
+    </article>
     <footer>
         <hr>
         <div class="footer">
