melhorias no html

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>DH News</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="container">
+<body>
     <head>
         <div class="titulo">
             <h1>DH News</h1>
         </div>
-        <div class="dataPostagem">
+        <div>
             <h5>Postado em 02/03/2021</h5>
         </div>
     </head>
@@ -28,7 +28,7 @@
             </main>
         </section>
         <section>
-            <div class="subtitulo">
+            <div>
                 <h2>Lorem ipsum dolor sit.</h2>
             </div>
             <div>
@@ -46,7 +46,7 @@
             </div>
         </section>
         <section>
-            <div class="subtitulo">
+            <div>
                 <h2>Lorem ipsum dolor sit.</h2>
             </div>
             <div>
@@ -74,12 +74,6 @@
             <a href="https://youtube.com" class="imagens">
                 <img src="img/youtube.svg">
             </a>
-            <!--
-            <img src="img/facebook.svg" alt="Face">
-            <img src="img/instagram.svg" alt="Insta">
-            <img src="img/linkedin.svg" alt="Linkedin">
-            <img src="img/youtube.svg" alt="Youtube">
-            -->
         </div>
     </footer>
 </body>
